resources/gitops-config/infrastructure/adguard-kids/templates/adguard-kids-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-kids-httproute
  namespace: infrastructure
  annotations:
    external-dns.kubernetes.io/hostname: kids-adguard.svc.damman.tech
  labels:
    app.kubernetes.io/name: adguard-kids
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: svc-gateway
      namespace: kube-system
      sectionName: svc-https-listener
  hostnames:
    - kids-adguard.svc.damman.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: adguard-kids
          port: 80
          weight: 1
